@@ -233,7 +233,7 @@ and
 in the testbed before running the tests.
 
 .TP
-.BI \-\-apt\-pocket= pocket
+.BI \-\-apt\-pocket= pocket[=pkgname,...]
 Add apt sources for \fIrelease\fR-\fIpocket\fR. This finds the first
 .B deb
 line in
@@ -243,6 +243,14 @@ that pocket to
 .B /etc/apt/sources.list.d/\fIpocket\fB.list\fR.
 Note that this does not imply calling
 .B apt-get update\fR.
+
+If a package list is given after =, set up apt pinning to use only those
+packages from
+.I pocket\fR.
+This can be used for minimizing dependencies taken from
+.I pocket
+so that package updates in that pocket can be tested independently from each
+other for better isolation.
 
 .TP
 .BI \-\-copy= HOSTPATH:TESTBEDPATH
